--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -15,6 +15,15 @@
             <h1>
                 Органайзер путешественника
             </h1>
+            {% with messages = get_flashed_messages() %}
+                {% if messages %}
+                <div class="alert alert-warning" role="alert">
+                    {% for message in messages %}
+                        {{ message }}<br>
+                    {% endfor %}
+                </div>
+                {% endif %}
+            {% endwith %}
             <div class = 'row'>
                 
                 <div class="col-4">
