--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -9,9 +9,17 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     {% block content %}
     <title>{{page_title}}</title>
-  </head>
-    
-    <form action="" method="POST" novalidate>
+    </head>
+    {% with messages = get_flashed_messages() %}
+      {% if messages %}
+      <div class="alert alert-warning" role="alert">
+          {% for message in messages %}
+              {{ message }}<br>
+          {% endfor %}
+      </div>
+      {% endif %}
+    {% endwith %}
+    <form action="{{ url_for('process_login') }}" method="POST" novalidate>
         {{ form.hidden_tag() }}
         <div class='form-group'>
             {{ form.username.label }}
