--- a/app/templates/expenditure/expenditures.html
+++ b/app/templates/expenditure/expenditures.html
@@ -19,20 +19,23 @@
       </div>
       {% endif %}
     {% endwith %}
-    <form action="{{ url_for('process_login') }}" method="POST" novalidate>
+    <form action="" method="POST" novalidate>
         {{ form.hidden_tag() }}
         <div class='form-group'>
-            {{ form.username.label }}
-            {{ form.username(size=32) }}
+            {{ form.name.label }}
+            {{ form.name(size=32) }}
         </div>
         <div class='form-group'>
-            {{ form.password.label }}
-            {{ form.password(size=32) }}
+            {{ form.sum_plan.label }}
+            {{ form.sum_plan(size=10) }}
+            {{ form.sum_fact.label }}
+            {{ form.sum_plan(size=10) }}
         </div>
-        <p>{{ form.remember_me() }} {{ form.remember_me.label }}</p>
+       
+        
         <p>{{ form.submit() }}</p>
     </form>
-{% endblock %}
+    {% endblock %}
    <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
