--- a/app/templates/user/registration.html
+++ b/app/templates/user/registration.html
@@ -9,17 +9,25 @@
     </div>
     {% endif %}
   {% endwith %}
-  <form action="{{ url_for('user.process_login') }}" method="POST" novalidate>
+  <form action="{{ url_for('user.process_reg') }}" method="POST" novalidate>
       {{ form.hidden_tag() }}
       <div class='form-group'>
           {{ form.username.label }}
           {{ form.username(size=32) }}
       </div>
       <div class='form-group'>
+          {{ form.email.label }}
+          {{ form.email(size=32) }}
+      </div>
+      <div class='form-group'>
           {{ form.password.label }}
           {{ form.password(size=32) }}
       </div>
-      <p>{{ form.remember_me() }} {{ form.remember_me.label }}</p>
+      <div class='form-group'>
+          {{ form.password2.label }}
+          {{ form.password2(size=32) }}
+      </div>
+     
       <p>{{ form.submit() }}</p>
   </form>
 {% endblock %}
