--- a/app/templates/expenditure/add_expenditure.html
+++ b/app/templates/expenditure/add_expenditure.html
@@ -30,6 +30,8 @@
         <div class='form-group'>
             {{ form.sum_plan.label }}
             {{ form.sum_plan(size=10) }}
+        </div>
+        <div class='form-group'>
             {{ form.sum_real.label }}
             {{ form.sum_real(size=10) }}
         </div>
