--- a/app/templates/menu.html
+++ b/app/templates/menu.html
@@ -18,6 +18,7 @@
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <a class="dropdown-item" href="plan/add_travel_plan">Добавить путешествие</a>
           <a class="dropdown-item" href="plan/travel_plan_info">Найти путешествие</a>
+          <a class="dropdown-item" href="currency_converter/show_currency/EUR">Валютный конвертор</a>
           <div class="dropdown-divider"></div>
           
         </div>
