--- a/app/templates/plan/add_travel_plan.html
+++ b/app/templates/plan/add_travel_plan.html
@@ -35,12 +35,18 @@
                     {{ form.country_field }}<br>
                 </p>
                 <p>
+                    {{ form.text.label }}<br>
+                    {{ form.text }}<br>
+                </p>
+                <p>
                        
                    <div >
                         
                         {{ form.date_start (class='datepicker') }}<br>
                     </div>
+                    <div>
                      {{ form.date_end (class='datepicker')}}<br>
+                     </div>
                 </p>
              
                 
