--- a/app/templates/plan/edit_travel_plan.html
+++ b/app/templates/plan/edit_travel_plan.html
@@ -35,11 +35,20 @@
                                 {{ form.name.label }}<br>
                                 {{ form.name }}<br>
                         </p>
-                        <div >
-                        
-                            {{ form.date_start (class='datepicker') }}<br>
-                        </div>
-                            {{ form.date_end (class='datepicker')}}<br>
+                        <p>
+                            {{ form.text.label }}<br>
+                            {{ form.text }}<br>
+                        </p>
+                        <p>
+                               
+                           <div >
+                                
+                                {{ form.date_start (class='datepicker') }}<br>
+                            </div>
+                            <div>
+                             {{ form.date_end (class='datepicker')}}<br>
+                             </div>
+                        </p>
                 </p>
                 <p>
                        
