--- a/app/templates/plan/travel_plan.html
+++ b/app/templates/plan/travel_plan.html
@@ -1,7 +1,6 @@
 <!doctype html>
 <html lang="ru">
     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
-    <link rel="stylesheet" href="/resources/demos/style.css">
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <script>
@@ -10,10 +9,18 @@
     } );
     </script>
   <head>
-    
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <title>{{page_title}}</title>
   </head>
+   
+  
   <body>
+      
       <div class = 'container'>
             <h1>
                 План затрат на путешествие {{ country_name }}
@@ -42,13 +49,30 @@
             <table class="table">
                 <thead>
                   <tr>
-                    <th scope="col">Статья затрат</th>
-                    <th scope="col">План</th>
-                    <th scope="col">Факт</th>
+                    <th scope="col">Страна</th>
+                    <th scope="col">Дата выезда</th>
+                    <th scope="col">Вата возвращения</th>
+                    <th scope="col">Статьи затрат</th>
                   </tr>
                 </thead>
                 <tbody>
-                    
+                   
+                  <tbody>
+                     
+                        {% for travel_plan in travel_plans_list %}
+                           <tr >
+                             
+                              <td > <a href="{{ url_for('plan.edit_travel_plan',travel_plan_id=travel_plan[3]) }}"> 
+                               
+                                 {{ travel_plan[0] }}</a></td>
+                              <td>{{ travel_plan[1] }}</td>
+                              <td>{{ travel_plan[2] }}</td> 
+                              <td> <a href="{{ url_for('expenditure.expenditures',travel_plan_id=travel_plan[3]) }}"> 
+                                Простмотр</a></td>
+                           </tr>
+                        {% endfor %}
+                     </tbody>
+                    <!--
                     <tbody>
                         {% for expenditure in expenditures %}
                            <tr>
@@ -59,6 +83,7 @@
                            </tr>
                         {% endfor %}
                      </tbody>
+                    -->
                    
                 </tbody>
               </table>
