--- a/app/templates/menu.html
+++ b/app/templates/menu.html
@@ -16,9 +16,9 @@
           Меню
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="plan/add_travel_plan">Добавить путешествие</a>
-          <a class="dropdown-item" href="plan/travel_plan_info">Найти путешествие</a>
-          <a class="dropdown-item" href="currency_converter/show_currency/EUR">Валютный конвертор</a>
+          <a class="dropdown-item" href="/plan/add_travel_plan">Добавить путешествие</a>
+          <a class="dropdown-item" href="/plan/search_travel_plan">Найти путешествие</a>
+          <a class="dropdown-item" href="/currency_converter/calc_currency/1-USD-EUR">Валютный конвертор</a>
           <div class="dropdown-divider"></div>
           
         </div>
