--- a/app/templates/plan/add_travel_plan.html
+++ b/app/templates/plan/add_travel_plan.html
@@ -1,29 +1,5 @@
-<!doctype html>
-<html lang="ru">
-  <head>
-    
-    <title>{{page_title}}</title>
-    {% with messages = get_flashed_messages() %}
-    {% if messages %}
-    <div class="alert alert-warning" role="alert">
-        {% for message in messages %}
-            {{ message }}<br>
-        {% endfor %}
-    </div>
-    {% endif %}
-    {% endwith %}
- 
-  </head>
-  <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
-  <link rel="stylesheet" href="/resources/demos/style.css">
-  <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-  <script>
-  $( function() {
-  $( ".datepicker" ).datepicker({dateFormat: 'dd/mm/yy'});
-  } );
-  </script>
-  <body>
+{% extends "base.html" %}
+{% block content %}
        
       <div class = 'container'>
             
@@ -41,11 +17,12 @@
                 <p>
                        
                    <div >
-                        
+                        {{form.date_start.label}}
                         {{ form.date_start (class='datepicker') }}<br>
                     </div>
-                    <div>
-                     {{ form.date_end (class='datepicker')}}<br>
+                    <div class="datepicker">
+                     {{form.date_end.label}}
+                     {{ form.date_end }}<br>
                      </div>
                 </p>
              
@@ -57,6 +34,6 @@
         
            
         </form>
+      </div>
    
-  </body>
-</html>
+{% endblock %}
