--- a/app/templates/currency_converter/rate.html
+++ b/app/templates/currency_converter/rate.html
@@ -1,18 +1,10 @@
 {% extends "base.html" %}
 {% block content %}
       <div class = 'container'>
-            <h1>
-                Органайзер путешественника
-            </h1>
-            {% with messages = get_flashed_messages() %}
-                {% if messages %}
-                <div class="alert alert-warning" role="alert">
-                    {% for message in messages %}
-                        {{ message }}<br>
-                    {% endfor %}
-                </div>
-                {% endif %}
-            {% endwith %}
+            <h2>
+               {{page_title}}
+            </h2>
+           
             <div class = 'row'>
                 
                 <div class="col-4">
@@ -22,32 +14,28 @@
                        
                        <p>
                            Рубли:
-                           {{form.ruble}}
+                           {{form.rate}}
                        </p>
                        <p>
                         <p> 
-
-
-
                                 {{ form.currency_convert.label }}<br>
                                 {{ form.currency_convert }}<br>
                         </p>
-                         <p>           
-                                {{ form.rate_convert }}<br>
-                        </p>
+                         
 
                         <p>
 
                             {{ form.currency.label }}<br>
                             {{ form.currency }}<br>
                         </p>
-                            <p>
-                                    {{ form.rate }}<br>
-                                </p>
+                           
                         <p>{{ form.submit() }}</p>
                     </form>
+                    <div class="p-3 mb-2 bg-light text-dark">
+                    <span class="border border-dark">{{converter}}</span>
+                    </div>
                 </div>
-
+                
             </div>
         </div>
         
