--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,9 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
       <div class = 'container'>
-            <h1>
-                Органайзер путешественника
-            </h1>
+            
             {% with messages = get_flashed_messages() %}
                 {% if messages %}
                 <div class="alert alert-warning" role="alert">
@@ -16,19 +14,7 @@
             <div class = 'row'>
                 
                 <div class="col-4">
-                    Курс {{name}} : {{rate}} рублей 
-                    <form action="" method="post" novalidate>
-                        {{ form.hidden_tag() }}
-                        <p>
-                                {{ form.currency.label }}<br>
-                                {{ form.currency }}<br>
-                            </p>
-                            <p>
-                                    {{ form.rate.label }}<br>
-                                    {{ form.rate }}<br>
-                                </p>
-                        <p>{{ form.submit() }}</p>
-                    </form>
+                        <span class="border">12345</span>
                 </div>
 
             </div>
