--- a/app/templates/plan/edit_travel_plan.html
+++ b/app/templates/plan/edit_travel_plan.html
@@ -1,61 +1,37 @@
-<!doctype html>
-<html lang="ru">
-    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
-    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-    <script>
-    $( function() {
-    $( ".datepicker" ).datepicker({dateFormat: 'dd/mm/yy'});
-    } );
-    </script>
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+{% extends "base.html" %}
+{% block content %}
+       
+<div class="row">
+    <div class="col-md-4">          
+        <form action="" method="POST" novalidate>
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <title>{{page_title}}</title>
-  </head>
-   
-  
-  <body>
-    
-      {% include 'menu.html' %}
-      <div class = 'container'>         
-         <form action="" method="POST" novalidate>
-
-              {{ form.hidden_tag() }}
-                <p>
-                        <p>
-                              Страна: {{ country_name }}<br>
-                        </p>
-                  
-                        <div >
-                            Дата начала поездки
-                            <br>
-                            {{ form.date_start (class='datepicker') }}
-                        </div>
-                        <br>
-                        <div>
-                            Дата окончания поездки
-                            <br>
-                            {{ form.date_end (class='datepicker')}}
-                        </div>
-                        <div>
-                            {{ form.text.label }}<br>
-                            {{ form.text }}<br>
-                        </div>
-                        
-                </p>
-                
-              <p>{{ form.submit() }}</p>
-            </form>
-           
-        </div>
-        
-           
+            {{ form.hidden_tag() }}
+             
+                      <div class='form-group'>
+                            Страна: {{ country_name }}<br>
+                      </div>
+                      <div class='form-group'>
+                          {{ form.text.label }}
+                          {{ form.text }}
+                      </div>
+                      <div class='form-group'>
+                         {{form.date_start.label}}
+                         
+                          {{ form.date_start  }}
+                      </div>
+                     
+                      <div class='form-group'> 
+                          {{form.date_end.lable}}
+                          
+                          {{ form.date_end}}
+                      </div>
+                     
+                      
+             
+            <p>{{ form.submit() }}</p>
         </form>
-   
-  </body>
-</html>
+      </div>
+    </div>
+          
+           
+  {% endblock %}
