--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,23 +1,40 @@
 {% extends "base.html" %}
 {% block content %}
-      <div class = 'container'>
-            
-            {% with messages = get_flashed_messages() %}
-                {% if messages %}
-                <div class="alert alert-warning" role="alert">
-                    {% for message in messages %}
-                        {{ message }}<br>
-                    {% endfor %}
-                </div>
-                {% endif %}
-            {% endwith %}
-            <div class = 'row'>
-                
-                <div class="col-4">
-                        <span class="border">12345</span>
-                </div>
-
-            </div>
+    <div class="my-3 p-3 bg-white rounded shadow-sm">
+        <h6 class="border-bottom border-gray pb-2 mb-0">Предстоящие путешествия:</h6>
+        {% for plan in plans_new %}
+        <div class="media text-muted pt-3">
+          <a href="{{ url_for('plan.travel_plan_info',travel_plan_id=plan.id) }}"> 
+          <svg class="bd-placeholder-img mr-2 rounded" width="32" height="32" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 32x32"><title>Placeholder</title><rect width="100%" height="100%" fill="#007bff"/><text x="50%" y="50%" fill="#007bff" dy=".3em">32x32</text></svg>
+          </a>
+          <p class="media-body pb-3 mb-0 small lh-125 border-bottom border-gray">
+            <strong class="d-block text-gray-dark">{{plan.name_travel}}</strong>
+            {{plan.about}}
+          </p>
         </div>
-        
+        {% endfor %}
+       
+        <small class="d-block text-right mt-3">
+          <a href="#">Все</a>
+        </small>
+    </div>
+    <br>
+    <div class="my-3 p-3 bg-white rounded shadow-sm">
+            <h6 class="border-bottom border-gray pb-2 mb-0">Прошедшие путешествия:</h6>
+            {% for plan in plans_old %}
+            <div class="media text-muted pt-3">
+                <a href="{{ url_for('plan.travel_plan_info',travel_plan_id=plan.id) }}"> 
+              <svg class="bd-placeholder-img mr-2 rounded" width="32" height="32" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 32x32"><title>Placeholder</title><rect width="100%" height="100%" fill="#007bff"/><text x="50%" y="50%" fill="#007bff" dy=".3em">32x32</text></svg>
+              </a>
+              <p class="media-body pb-3 mb-0 small lh-125 border-bottom border-gray">
+                <strong class="d-block text-gray-dark">{{plan.name_travel}}</strong>
+                {{plan.about}}
+              </p>
+            </div>
+            {% endfor %}
+           
+            <small class="d-block text-right mt-3">
+              <a href="#">Все</a>
+            </small>
+        </div>
 {% endblock %}
