--- a/app/templates/user/registration.html
+++ b/app/templates/user/registration.html
@@ -1,33 +1,29 @@
 {% extends "base.html" %}
 {% block content %}
-  {% with messages = get_flashed_messages() %}
-    {% if messages %}
-    <div class="alert alert-warning" role="alert">
-        {% for message in messages %}
-            {{ message }}<br>
-        {% endfor %}
+  
+  <div class="row">
+        <div class="col-md-4">
+            <form action="{{ url_for('user.process_reg') }}" method="POST" novalidate>
+                {{ form.hidden_tag() }}
+                <div class='form-group'>
+                    {{ form.username.label }}
+                    {{ form.username(size=32) }}
+                </div>
+                <div class='form-group'>
+                    {{ form.email.label }}
+                    {{ form.email(size=32) }}
+                </div>
+                <div class='form-group'>
+                    {{ form.password.label }}
+                    {{ form.password(size=32) }}
+                </div>
+                <div class='form-group'>
+                    {{ form.password2.label }}
+                    {{ form.password2(size=32) }}
+                </div>
+                
+                <p>{{ form.submit() }}</p>
+            </form>
+        </div>
     </div>
-    {% endif %}
-  {% endwith %}
-  <form action="{{ url_for('user.process_reg') }}" method="POST" novalidate>
-      {{ form.hidden_tag() }}
-      <div class='form-group'>
-          {{ form.username.label }}
-          {{ form.username(size=32) }}
-      </div>
-      <div class='form-group'>
-          {{ form.email.label }}
-          {{ form.email(size=32) }}
-      </div>
-      <div class='form-group'>
-          {{ form.password.label }}
-          {{ form.password(size=32) }}
-      </div>
-      <div class='form-group'>
-          {{ form.password2.label }}
-          {{ form.password2(size=32) }}
-      </div>
-     
-      <p>{{ form.submit() }}</p>
-  </form>
 {% endblock %}
