--- a/app/templates/currency_converter/rate.html
+++ b/app/templates/currency_converter/rate.html
@@ -1,10 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-      <div class = 'container'>
-            <h2>
-               {{page_title}}
-            </h2>
-           
+      
             <div class = 'row'>
                 
                 <div class="col-4">
@@ -12,31 +8,33 @@
                     <form action="" method="post" novalidate>
                         {{ form.hidden_tag() }}
                        
-                       <p>
-                           Рубли:
+                        <div class='form-group'>
+                            {{ form.rate.label }}
                            {{form.rate}}
-                       </p>
-                       <p>
-                        <p> 
-                                {{ form.currency_convert.label }}<br>
-                                {{ form.currency_convert }}<br>
-                        </p>
+                        </div>
+                      
+                        <div class='form-group'>
+                                {{ form.currency_convert.label }}
+                                {{ form.currency_convert }}
+                        </div>
                          
 
-                        <p>
-
-                            {{ form.currency.label }}<br>
-                            {{ form.currency }}<br>
-                        </p>
+                        <div class='form-group'>
+                            {{ form.currency.label }}
+                            {{ form.currency }}
+                        </div>
                            
                         <p>{{ form.submit() }}</p>
                     </form>
-                    <div class="p-3 mb-2 bg-light text-dark">
-                    <span class="border border-dark">{{converter}}</span>
-                    </div>
+
                 </div>
-                
             </div>
-        </div>
+                <div class="p-3 mb-2 bg-light text-dark">
+                    {{converter}} {{info}}
+                </div>
+            
+               
+                
+        
         
 {% endblock %}
