--- a/app/templates/expenditure/add_expenditure.html
+++ b/app/templates/expenditure/add_expenditure.html
@@ -1,25 +1,32 @@
 {% extends "base.html" %}
 {% block content %}
-    <h5>{{name_travel}}</h5>
-    <form action="" method="POST" novalidate>
-        {{ form.hidden_tag() }}
-        
-        <div class='form-group'>
-            {{ form.name.label }}
-            {{ form.name(size=32) }}
-        </div>
-        <div class='form-group'>
-            {{ form.sum_plan.label }}
-            {{ form.sum_plan(size=10) }}
-        </div>
-        <div class='form-group'>
-            {{ form.sum_real.label }}
-            {{ form.sum_real(size=10) }}
-        </div>
        
+    <div class="row">
+        <div class="col-md-4">       
         
-        <p>{{ form.submit() }}</p>
-    </form>
- 
+            <h6>{{name_travel}}</h6>
+            <form action="" method="POST" novalidate>
+                {{ form.hidden_tag() }}
+                
+                <div class='form-group'>
+                    {{ form.name.label }}
+                    {{ form.name(size=32) }}
+                </div>
+                <div class='form-group'>
+                    {{ form.sum_plan.label }}
+                    {{ form.sum_plan(size=10) }}
+                </div>
+                <div class='form-group'>
+                    {{ form.sum_real.label }}
+                    {{ form.sum_real(size=10) }}
+                </div>
+            
+                
+                <p>{{ form.submit() }}</p>
+            </form>
+        </div>
+    </div>
+    
+    
 {% endblock %}
   
