--- a/app/templates/expenditure/delete_expenditure.html
+++ b/app/templates/expenditure/delete_expenditure.html
@@ -1,17 +1,24 @@
 {% extends "base.html" %}
 {% block content %}
-      
+        <div class="p-3 mb-2 bg-light text-dark">
+                Вы действительно хотите удалить статью затрат {{name}}?
+        </div>
+        
+                
+                
         <form action="" method="POST" novalidate>
-            {{ form.hidden_tag() }}
-           
-            <div class='form-group'>
-                    Вы действительно хотите удалить статью затрат: {{name}}
-            </div>
-            
-          
-            
-            <p>{{ form.submit() }} {{form.cancel}} </p>
+                {{ form.hidden_tag() }}
+                
+                <div class="row">
+                        
+                        <div class="col">{{ form.submit() }} </div>
+                        <div class="col">{{form.cancel}}</div> 
+                        <div class="col"></div> 
+                        <div class="col"></div> 
+                </div>
         </form>
+               
+       
       
 {% endblock %}
   
