--- a/app/templates/expenditure/edit_expenditure.html
+++ b/app/templates/expenditure/edit_expenditure.html
@@ -1,22 +1,27 @@
 {% extends "base.html" %}
 {% block content %}
-        <h5>{{name_travel}}</h5>
-        <form action="" method="POST" novalidate>
-            {{ form.hidden_tag() }}
-         
-            <div class='form-group'>
-                {{ form.name.label }}
-                {{ form.name(size=32) }}
-            </div>
-            <div class='form-group'>
-                {{ form.sum_plan.label }}
-                {{ form.sum_plan(size=10) }}
-                {{ form.sum_real.label }}
-                {{ form.sum_real(size=10) }}
-            </div>
-          
+    <div class="row">
+        <div class="col-md-4">    
+
+            <h5>{{name_travel}}</h5>
+            <form action="" method="POST" novalidate>
+                {{ form.hidden_tag() }}
             
-            <p>{{ form.submit() }}</p>
-        </form>
+                <div class='form-group'>
+                    {{ form.name.label }}
+                    {{ form.name(size=32) }}
+                </div>
+                <div class='form-group'>
+                    {{ form.sum_plan.label }}
+                    {{ form.sum_plan(size=10) }}
+                    {{ form.sum_real.label }}
+                    {{ form.sum_real(size=10) }}
+                </div>
+            
+                
+                <p>{{ form.submit() }}</p>
+            </form>
+        </div>
+    </div>
 {% endblock %}
   
