--- a/app/templates/plan/add_travel_plan.html
+++ b/app/templates/plan/add_travel_plan.html
@@ -1,34 +1,61 @@
-{% extends "base.html" %}
-{% block content %}
-       
-<div class="row">
-    <div class="col-md-4">       
-        <form action="" method="post" novalidate>
+<!doctype html>
+<html lang="ru">
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <script>
+    $( function() {
+    $( ".datepicker" ).datepicker({dateFormat: 'dd/mm/yy'});
+    } );
+    </script>
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-          {{ form.hidden_tag() }}
-            <div class='form-group'>
-                {{ form.country_field.label }}
-                {{ form.country_field }}
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <title>{{page_title}}</title>
+  </head>
+   
+  
+  <body>
+      {% include 'menu.html' %}
+      <div class = 'container'>
+       
+        <div class="row">
+            <div class="col-md-4">       
+                <form action="" method="post" novalidate>
+
+                  {{ form.hidden_tag() }}
+                    <div class='form-group'>
+                        {{ form.country_field.label }}
+                        {{ form.country_field }}
+                    </div>
+                    <div class='form-group'>
+                        {{ form.text.label }}
+                        {{ form.text }}
+                    </div>
+                    <div class='form-group'>
+                            {{form.date_start.label}}
+                            {{ form.date_start (class='datepicker') }}
+                      </div>
+                      <div class='form-group'>
+                          {{form.date_end.label}}
+                          {{ form.date_end (class='datepicker')  }}
+                      </div>
+                    
+                  
+                    
+                  <p>{{ form.submit() }}</p>
+                </form>
             </div>
-            <div class='form-group'>
-                {{ form.text.label }}
-                {{ form.text }}
-            </div>
-            <div class='form-group'>
-                    {{form.date_start.label}}
-                    {{ form.date_start }}
-              </div>
-              <div class='form-group'>
-                  {{form.date_end.label}}
-                  {{ form.date_end }}
-              </div>
-            
-          
-            
-          <p>{{ form.submit() }}</p>
-        </form>
-    </div>
-</div>
+        </div>
       
    
-{% endblock %}
+      </div>
+        
+       
+   
+    </body>
+  </html>
